--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,13 @@
 /*  your css code here. If applicable */
+:root {
+  --page-background-color: rgb(135, 206, 235);
+}
+
+body {
+  background-color: var(--page-background-color);
+}
+
+p:first-child {
+  color: white;
+  background-color: black;
+}
